--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongoose": "^6.7.5",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "ts-node": "^10.9.1",
@@ -25,6 +26,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
+    "@types/mongoose": "^5.11.97",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34"
   }
