--- a/package.json
+++ b/package.json
@@ -12,22 +12,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.11.10",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
-    "@types/express-session": "^1.17.5",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.11.10",
     "@types/passport": "^1.0.11",
-    "@types/passport-local": "^1.0.34"
+    "@types/passport-jwt": "^3.0.7",
+    "@types/passport-local": "^1.0.34",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
