--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^6.7.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "redis": "^4.5.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
